--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "engines": {
     "node": "^18 || >=18"
   },
-  "main": "src/index.js",
+  "main": "dist/app.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "cross-env NODE_ENV=development node .",
-    "start": "NODE_ENV=production node ."
+    "lint": "eslint src",
+    "build": "tsc",
+    "start": "NODE_ENV=production node .",
+    "start:dev": "cross-env nodemon",
+    "prepare": "node -e \"if (process.env.NODE_ENV === 'production'){process.exit(1)} \" || husky install"
   },
   "dependencies": {
     "@koa/cors": "^4.0.0",
@@ -24,6 +27,16 @@
     "koa": "^2.14.2"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "@tsconfig/node20": "latest",
+    "@types/koa": "^2.13.6",
+    "@types/node": "latest",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.44.0",
+    "husky": "^8.0.3",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
