--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
     "prepare": "node -e \"if (process.env.NODE_ENV === 'production'){process.exit(1)} \" || husky install"
   },
   "dependencies": {
+    "@koa/bodyparser": "^5.0.0",
     "@koa/cors": "^4.0.0",
     "dotenv": "^16.3.1",
     "koa": "^2.14.2",
-    "koa-bodyparser": "^4.4.1"
+    "koa-static": "^5.0.0"
   },
   "devDependencies": {
     "@tsconfig/node20": "latest",
     "@types/koa": "^2.13.6",
-    "@types/koa-bodyparser": "^4.3.10",
     "@types/node": "latest",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
