--- a/.gitea/workflows/main.yaml
+++ b/.gitea/workflows/main.yaml
@@ -31,6 +31,7 @@ jobs:
         uses: papodaca/install-docker-action@main
 
       # https://github.com/marketplace/actions/docker-login
+      - run: echo "Try login to ${{ env.REGISTRY }} as ${{ gitea.actor }}"
       - name: Log in to the Container registry
         uses: docker/login-action@v2
         with:
