--- a/.gitea/workflows/main.yaml
+++ b/.gitea/workflows/main.yaml
@@ -30,8 +30,9 @@ jobs:
       - name: Install docker for ubuntu-latest runner
         uses: papodaca/install-docker-action@main
 
+      # https://gitea.com/gitea/act_runner/issues/303
       # https://github.com/marketplace/actions/docker-login
-      - run: echo "Try login to ${{ env.REGISTRY }} as ${{ gitea.actor }}/${{ secrets.WORKFLOW_REGISTRY_TOKEN }}"
+      - run: echo "Try login to ${{ env.REGISTRY }} as ${{ gitea.actor }}"
       - name: Log in to the Container registry
         uses: docker/login-action@v2
         with:
