--- a/.gitea/workflows/main.yaml
+++ b/.gitea/workflows/main.yaml
@@ -8,8 +8,8 @@ on:
 # For built-in contexts, checkout https://docs.github.com/en/actions/learn-github-actions/contexts
 env:
   REGISTRY: ${{ secrets.REGISTRY || "gitea.com" }}
-  REGISTRY_USER: ${{  secrets.REGISTRY_USER || gitea.actor }}
-  REGISTRY_TOKEN: ${{  secrets.REGISTRY_TOKEN || secrets.GITEA_TOKEN }}
+  REGISTRY_USER: ${{ secrets.REGISTRY_USER || gitea.actor }}
+  REGISTRY_TOKEN: ${{ secrets.REGISTRY_TOKEN || secrets.GITEA_TOKEN }}
 
 jobs:
   # Build and push image to registry
@@ -22,7 +22,9 @@ jobs:
 
     steps:
       - name: Action digest
-        run: echo "🎉 The job was triggered by '${{ gitea.event_name }}' event on branch '${{ gitea.ref }}' of repository '${{ gitea.repository }}', running on '${{ runner.os }}/${{ runner.arch }}' runner."
+        run: |
+          echo "🎉 The job was triggered by '${{ gitea.event_name }}' event on branch '${{ gitea.ref }}' of repository '${{ gitea.repository }}', running on '${{ runner.os }}/${{ runner.arch }}' runner."
+          echo "Operating image ${{ env.REGISTRY }}/${{ gitea.repository }} as ${{ env.REGISTRY_USER }}"
 
       - name: Check out repository code
         uses: actions/checkout@v3
