--- a/.gitea/workflows/main.yaml
+++ b/.gitea/workflows/main.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Action digest
         run: |
           echo "🎉 The job was triggered by '${{ gitea.event_name }}' event on branch '${{ gitea.ref }}' of repository '${{ gitea.repository }}', running on '${{ runner.os }}/${{ runner.arch }}' runner."
-          echo "Operating image ${{ env.REGISTRY }}/${{ gitea.repository }} as ${{ env.REGISTRY_USER }}"
+          echo "Operating image '${{ secrets.REGISTRY }}' ${{ env.REGISTRY }}/${{ gitea.repository }} as ${{ env.REGISTRY_USER }}"
 
       - name: Check out repository code
         uses: actions/checkout@v3
