--- a/.gitea/workflows/main.yaml
+++ b/.gitea/workflows/main.yaml
@@ -7,7 +7,8 @@ on:
 
 # For built-in contexts, checkout https://docs.github.com/en/actions/learn-github-actions/contexts
 env:
-  REGISTRY: ${{ var.REGISTRY || "gitea.com" }}
+  REGISTRY: "git.liuyajie.com"
+  # REGISTRY: ${{ var.REGISTRY || "gitea.com" }} Apply this after Gitea support actions->variable feature
 
 jobs:
   # Build and push image to registry
