--- a/.gitea/workflows/main.yaml
+++ b/.gitea/workflows/main.yaml
@@ -34,6 +34,7 @@ jobs:
 
       # https://gitea.com/gitea/act_runner/issues/303
       # https://github.com/marketplace/actions/docker-login
+      - run: echo "registry/username is ${{ env.REGISTRY || "gitea.com" }}, ${{ secrets.REGISTRY_USER || gitea.actor }}"
       - name: Log in to the Container registry
         uses: docker/login-action@v2
         with:
