chore: bug fixing docker registry issue

--- a/.gitea/workflows/main.yaml
+++ b/.gitea/workflows/main.yaml
@@ -34,13 +34,15 @@ jobs:
 
       # https://gitea.com/gitea/act_runner/issues/303
       # https://github.com/marketplace/actions/docker-login
-      - run: echo "registry/username is ${{ env.REGISTRY || "gitea.com" }}, ${{ secrets.REGISTRY_USER || gitea.actor }}"
       - name: Log in to the Container registry
         uses: docker/login-action@v2
         with:
-          registry: ${{ env.REGISTRY || "gitea.com" }}
-          username: ${{ secrets.REGISTRY_USER || gitea.actor }}
-          password: ${{ secrets.REGISTRY_TOKEN || secrets.GITEA_TOKEN }}
+          registry: ${{ env.REGISTRY }}
+          username: ${{ gitea.actor }}
+          password: ${{ secrets.REGISTRY_TOKEN }}
+          # registry: ${{ env.REGISTRY || "gitea.com" }}
+          # username: ${{ secrets.REGISTRY_USER || gitea.actor }}
+          # password: ${{ secrets.REGISTRY_TOKEN || secrets.GITEA_TOKEN }}
 
       # https://github.com/marketplace/actions/docker-metadata-action
       - name: Extract metadata (tags, labels) for Docker
