--- a/.gitea/workflows/main.yaml
+++ b/.gitea/workflows/main.yaml
@@ -37,7 +37,7 @@ jobs:
       - name: Log in to the Container registry
         uses: docker/login-action@v2
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ${{ !!env.REGISTRY && env.REGISTRY || "gitea.com" }}
           username: ${{ gitea.actor }}
           password: ${{ secrets.REGISTRY_TOKEN }}
           # registry: ${{ env.REGISTRY || "gitea.com" }}
