--- a/.gitea/workflows/main.yaml
+++ b/.gitea/workflows/main.yaml
@@ -8,7 +8,7 @@ on:
 # For built-in contexts, checkout https://docs.github.com/en/actions/learn-github-actions/contexts
 env:
   REGISTRY: "git.liuyajie.com"
-  # REGISTRY: ${{ var.REGISTRY || "gitea.com" }} Apply this after Gitea support actions->variable feature
+  # REGISTRY: ${{ var.REGISTRY || 'gitea.com' }} Apply this after Gitea support actions->variable feature
 
 jobs:
   # Build and push image to registry
@@ -38,11 +38,8 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY || 'gitea.com' }}
-          username: ${{ gitea.actor }}
-          password: ${{ secrets.REGISTRY_TOKEN }}
-          # registry: ${{ env.REGISTRY || "gitea.com" }}
-          # username: ${{ secrets.REGISTRY_USER || gitea.actor }}
-          # password: ${{ secrets.REGISTRY_TOKEN || secrets.GITEA_TOKEN }}
+          username: ${{ secrets.REGISTRY_USER || gitea.actor }}
+          password: ${{ secrets.REGISTRY_TOKEN || secrets.GITEA_TOKEN }}
 
       # https://github.com/marketplace/actions/docker-metadata-action
       - name: Extract metadata (tags, labels) for Docker
