--- a/.gitea/workflows/main.yaml
+++ b/.gitea/workflows/main.yaml
@@ -8,7 +8,8 @@ on:
 # For built-in contexts, checkout https://docs.github.com/en/actions/learn-github-actions/contexts
 env:
   REGISTRY: "git.liuyajie.com"
-  # REGISTRY: ${{ var.REGISTRY || 'gitea.com' }} Apply this after Gitea support actions->variable feature
+  # Replace above with below, after Gitea support actions->variable feature
+  # REGISTRY: ${{ var.REGISTRY || 'gitea.com' }}
 
 jobs:
   # Build and push image to registry
@@ -37,7 +38,7 @@ jobs:
       - name: Log in to the Container registry
         uses: docker/login-action@v2
         with:
-          registry: ${{ env.REGISTRY || 'gitea.com' }}
+          registry: ${{ env.REGISTRY }}
           username: ${{ secrets.REGISTRY_USER || gitea.actor }}
           password: ${{ secrets.REGISTRY_TOKEN || secrets.GITEA_TOKEN }}
 
