--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "auther",
-  "license": "MIT",
   "version": "1.0.0",
+  "author": "Lau, Kamas <kamaslau@dingtalk.com> (https://www.kamaslau.com/)",
+  "license": "MIT",
   "description": "",
-  "keywords": [],
-  "author": {
-    "name": "Kamas Lau",
-    "email": "kamaslau@dingtalk.com"
-  },
+  "keywords": [
+    "github",
+    "gitee",
+    "wechat"
+  ],
   "engines": {
-    "node": "^18 || >=18"
+    "node": "^22 || >=20",
+    "pnpm": "^9"
   },
-  "main": "dist/app.js",
   "type": "module",
+  "main": "dist/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src",
@@ -30,16 +32,18 @@
     "koa-static": "^5.0.0"
   },
   "devDependencies": {
-    "@tsconfig/node20": "latest",
+    "@eslint/js": "^9.2.0",
+    "@tsconfig/node22": "^22.0.0",
     "@types/koa": "^2.15.0",
-    "@types/node": "latest",
+    "@types/node": "^20.12.12",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.57.0",
+    "eslint": "^9.2.0",
     "husky": "^9.0.11",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.9.0"
   }
 }
