--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "author": "Lau, Kamas <kamaslau@dingtalk.com> (https://www.kamaslau.com/)",
   "license": "MIT",
-  "description": "Authorization&Authentication",
+  "description": "Authorization & Authentication",
   "keywords": [
     "github",
     "gitee",
@@ -17,7 +17,7 @@
   "main": "dist/app.js",
   "scripts": {
     "lint": "eslint src",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "tsc",
     "start": "NODE_ENV=production node .",
     "start:dev": "cross-env nodemon",
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@tsconfig/node22": "^22.0.0",
+    "@types/jest": "^29.5.14",
     "@types/koa": "^2.15.0",
     "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "^8.18.1",
@@ -42,7 +43,10 @@
     "eslint": "^9.17.0",
     "globals": "^15.14.0",
     "husky": "^9.1.7",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "tsimp": "^2.0.12",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.18.1"
