--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "wechat"
   ],
   "engines": {
-    "node": "^22 || >=20",
-    "pnpm": "^9"
+    "node": "^22 || >=23"
   },
   "type": "module",
   "main": "dist/app.js",
@@ -36,9 +35,9 @@
     "@tsconfig/node22": "^22.0.0",
     "@types/jest": "^29.5.14",
     "@types/koa": "^2.15.0",
-    "@types/node": "^22.13.0",
-    "@typescript-eslint/eslint-plugin": "^8.22.0",
-    "@typescript-eslint/parser": "^8.22.0",
+    "@types/node": "^22.13.1",
+    "@typescript-eslint/eslint-plugin": "^8.23.0",
+    "@typescript-eslint/parser": "^8.23.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.19.0",
     "globals": "^15.14.0",
@@ -49,7 +48,7 @@
     "ts-node": "^10.9.2",
     "tsimp": "^2.0.12",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.22.0"
+    "typescript-eslint": "^8.23.0"
   },
   "repository": {
     "type": "git",
